style.css
body {background: url('img/backgroundimage.jpg') #000 center top no-repeat; font-family: Helvetica, Arial, sans-serif; margin-top: 31px;}
ul {padding: 0;}
li {list-style: none;}
h1 {}
h2, h3, h4, h5, h6, .btn {}
.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, 
.col-xs-12 {padding: 0;}
a:link {text-decoration: none;}
.row {margin: 0;}

.clearfix {*zoom: 1;}
.clearfix:before,
.clearfix:after {display: table; content: ""; line-height: 0;}
.clearfix:after {clear: both;}

.ie-logo {display: none;}
/* CSS BY DAVE IS BELOW */
/*this removes a blue outline that appeared around the hamburger after it was clicked in Chrome*/
button:focus {outline:0px; -webkit-appearance:none;}

.navbar {background: black; border: none; height: 117px;}
.navbar h6 {margin: 4px 0 0 0;}
/* .navbar-default .navbar-brand {position: absolute; color: white; padding: 2px 2px 2px 300px;} not needed anymore */
.navbar-header img.logo {width: 220px;}
.navbar-default .nav li a {color: white; padding: 10px 15px 13px 15px;}
.navbar-collapse.collapsing .nav{margin-top: -15px;}
.logoText {color: white;}
.navbar-left {padding-top: 10px;}
.not-found {padding-top: 20px;}

.navbar-collapse.in, .navbar-collapse.collapsing {position: absolute; background: black; top: 100%; width: 150px; padding-bottom: 10px;}
.navbar-toggle {border: none; margin: 10px 0 50px 0;}
.navbar-toggle .icon-bar {width: 40px; height: 5px; margin-bottom: 10px; margin-right: 20px;}

/* removes Bootstrap's default return to grey background color after button is pressed & gray background for button in hover state*/
.navbar .navbar-toggle:focus, .navbar .navbar-toggle:hover {
	background-color: transparent;
}

/*Firefox was rendering the top margin of the dropdown menu differently, but this took care of it: */
@-moz-document url-prefix() {.navbar-collapse.in, .navbar-collapse.collapsing {margin-top: -2px;}}

.navbar-right {padding-top: 35px;}
.spacer {height: 50px;}

/* removes placeholder text in input field on focus */
input:focus::-webkit-input-placeholder { color:transparent; }
input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */

/* CSS for the modal button: */
.close {color: white; opacity: 1;}
.modal-body {padding-left: 0;}

h3.section-heading {color: white; font-weight: 100; letter-spacing: 3px; margin-top: 20px; padding-bottom: 20px;}
h3.event-heading {text-align: center; height: 112px; background: url('img/bg-header.png') no-repeat center top; padding: 50px 0; margin: 0;}

.signup {color: white; text-align: center; font-size: 18px; padding: 10px 0 40px 0;}
.signup p {padding: 0 0 8px 0;}
.signup input {height: 40px; border: 1px solid #424242; border-radius: 5px; -moz-box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5); -webkit-box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5); box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5);}
.signup button, .all-events a {width: 134px; height: 39px; background: url('img/btn-signup.png') no-repeat; color: #fff; padding-top: 1px; border: none; float: left; margin-left: 20px;}
.signup input[type="submit"] {opacity: 0;}

.front-content {border-top: 1px solid #ccc; background: #161616; padding: 0 40px 0 40px;}

/* Event Thumbs from Homepage */
article.thumb {height: 480px; float: left; position: relative; overflow: hidden; display: block;}
.posts {padding: 0;}
.posts .col-xs-4 {padding: 0;}
.flyer img {position: absolute; z-index: 1;}
.thumb .entry-info {background: rgba(0,0,0,0.8); color: #fff; padding: 15px; z-index: 2; position: absolute; bottom: 0; width: 100%;}
.entry-desc, h3.entry-title, .thumb .meta, .entry-details {border-bottom: 4px solid #fff; padding-bottom: 6px;}
h3.entry-title {margin: 0 0 6px 0;}
h3.entry-title a {color: #fff; text-transform: uppercase; font-size: 20px;}
.entry-desc p {margin: 0;}
.entry-details {padding-top: 9px;}
.entry-details h6 {text-transform: uppercase; font-size: 10px; letter-spacing: 1px; font-weight: bold; margin: 1px;}
.entry-details a {color: #fff;}
.entry-details .col-xs-5, .entry-details .col-xs-12 {padding: 0;}
.entry-details .dj {padding-top: 8px;}
.thumb .meta {padding: 6px 0 2px 0;}
.thumb .meta a {color: #000;}
.filter-us {padding-top: 20px;}

/* Filtering */
.filtering {margin-bottom: 20px;}
.filtering h4, .filtering button {font-size: 16px; color: #fff; text-transform: uppercase;}
.filtering h4 {display: inline-block; margin: 0 10px 0 0; font-weight: 100; letter-spacing: 2px;}
.filtering button {color: #000; letter-spacing: 1px; border: none; padding: 15px 20px 12px 20px;}
.filtering button.active {-moz-box-shadow: inset 0 0 11px #666; -webkit-box-shadow: inset 0 0 11px #666; box-shadow: inset 0 0 11px #666;}

.events {min-height: 725px;}
.all-events {text-align: center; margin-top: 40px;}
.all-events a {color: #fff; float: left; display: block; margin: 0 45%; padding-top: 8px; font-weight: 500;}

.editorial {padding-bottom: 40px; /*margin-top: 50px;*/}
.editorial .entry-desc, .editorial h3.entry-title, .editorial .thumb .meta, .entry-details {border: none;}
.editorial .entry-info-wrap {width: auto;}
.editorial h3 {margin-bottom: 0;}
.editorial h3.entry-title a {text-transform: none;}
.editorial h5 {margin-top: 0;}
.editorial article {height: auto;}
.editorial .image {max-height: 300px; overflow: hidden;}
.meta .tags a {background: orange;}
.thumb .article-info {color: #fff; padding: 15px;}
footer {padding: 4px 10px 70px 0; text-align: right;}
#article-sidebar {padding: 0 10px 0 20px;}
.article-sidebar h3 {margin-bottom: 10px;}
.article-sidebar li {margin-bottom: 7px; line-height: 1.3em;}

/* END CSS BY DAVE */

.btn-lg {border-radius: 10px;}

/* Sidebars */
#sidebar, .widget-title, aside h3 {color: #fff;}
#sidebar h3 {text-transform: uppercase; margin: 15px 0 10px 0; font-size: 20px;}
#main-sidebars {padding: 0 10px 0 0;}
.single #main-sidebars {padding-left: 10px;}
	
/* Events */
.day-date a, .meta a {padding: 2px 4px 2px 4px; margin: 0 4px 4px 0; float: left; color: #000;}
.meta .venue a {background: #2a25ed; color: #ddd;}
.meta .neighborhood a {background: #db009d;}
.meta .genre a {background: #8b00f8;}
.meta .price a {background: #b973f0;}
.meta .djs a {background: aqua;}
.meta .promoters a {background: #4cadff;}
.day-date a {background: #ff2527; margin-bottom: 12px;}

/* Listings Pages */
.page-header h1, h1.page-title, h1.entry-title {color: #161616;}
.listing .front-content, .listing .col-xs-10 {padding: 0;}
.listing article {color: #fff;}
.listing .main {padding-left: 8px;}
/* No longer needed?
.listing {margin-top: 50px;}*/
/*.listing h5 a {padding: 2px 4px 2px 4px; margin: 0 4px 4px 0; float: left; color: #000;}*/
.listing .flyer {overflow: hidden; padding: 0; min-height: 375px;}
.next-prev {text-align: center; color: #fff; font-size: 18px; padding: 8px;}
.next-prev a {color: #fff; padding: 5px;}
.next-prev a:hover {background: #333;}

/* Single event Page */
.single header {padding: 0; overflow: hidden;} 
.single .header-info {background: rgba(0,0,0,0.5); z-index: 2; position: relative; padding: 50px 0 25px 30px;}
.single .front-content {padding-left: 0; min-height: 600px;}
.single .flyer {overflow: hidden; min-height: 250px;}
.single .bg-flyer {position: absolute; z-index: 0;}
.single header h1, .single header h3 {position: relative; z-index: 2; color: #fff; text-shadow: 2px 2px #000;}
.single header h3 {margin-top: 0;}
.single header h4 {color: #fff; text-shadow: 2px 2px #000;}
.single .entry-summary {padding: 15px; color: #fff;}
.single .front-content {padding: 0;}
.category-name {float: left;}
.category-term {float: left; margin: 8px;}

/* this media query is by Dave- centers the nav when not in hamburger mode */
/* the centering idea is from http://designshack.net/articles/css/how-to-center-anything-with-css/ */
@media screen and (min-width: 1151px){
	.nav{
		/* width: 456px; This breaks some things so Brian is hiding it now */
		padding-top: 20px;
		position: absolute;
		margin-left: -228px;
  		left: 50%;
  	}
}

/*this adds some padding to the header content when the left/right margins disappear on smaller screens: */
@media screen and (max-width: 767px){
	.navbar-header{padding: 0 10px 0 10px;}
}
	
/* 1024px */
@media all and (max-width: 1024px) {
	
}

/* iPad, portrait or landscape */
@media only screen 
and (min-device-width : 768px) 
and (max-device-width : 1024px)  {
	.container {padding: 0 5px 0 5px;}
	.front-content {padding: 0 10px 0 10px;}
	#sidebar h3 {font-size: 16px;}
	/*changes the size of the hamburger: */
	/* commented out because the hamburger is bigger on all screens now */
/*	.navbar-toggle .icon-bar {width: 40px; height: 5px; margin-bottom: 10px; margin-right: 20px;} */
}

/* iPad in portrait */
@media only screen 
and (min-device-width : 768px) 
and (max-device-width : 1024px) 
and (orientation : portrait) {
	#sidebar {font-size: 10px;}
	#sidebar h3 {font-size: 13px; letter-spacing: -1px;}
}

/* iPhone */
@media only screen and (min-width:320px) and (max-width:767px) {
	.container {padding: 0;}
	.xs-hide {display: none;}
	.spacer {height: 70px;}
	.navbar-header img.logo {width: 160px;}
	.logotext {font-size: 15px;}
	.signup {padding: 50px 10px 40px 10px;}
	.front-content {padding: 0 10px 0 10px;}
	.filtering button {padding: 6px 8px 6px 8px; font-size: 12px;}
}

/* iPhone 5/5S */
@media only screen and (min-width:320px) and (max-width:568px) and (orientation:landscape) and (device-aspect-ratio: 40/71) {}

/* iPhone <5 */
@media screen and (device-aspect-ratio: 2/3) {
	
}

/* iPhone portrait */
@media only screen 
and (min-device-width : 320px) 
and (max-device-width : 767px) 
and (orientation : portrait) {
	.filtering .btn-group {margin-bottom: 5px;}
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
/* IE10+ CSS styles go here */
	.logo {display: none;}
	.ie-logo {display: block;}
}

/* collapse the Bootstrap navbar at a custom width */
/* see http://stackoverflow.com/questions/22329606/bootstrap-navbar-collapse-media-query-on-custom-width */
@media (max-width: 1150px) {
	.nav-share-buttons{
		display:none;
	}
    .navbar-header {
        float: none;
    }
    .navbar-left, .navbar-right {
        float: none !important;
    }
   .logo {
    	padding-top: 10px;
    }
    .logoText {
    	padding-bottom: 1px;
    }
    .navbar-toggle {
        display: block;
        margin-right: 0;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-fixed-top {
        top: 0;
        border-width: 0 0 1px;
    }
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar .navbar-nav {
        float: none;
 		margin-top: 7.5px; 
    }
    .navbar-nav>li {
        float: none;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .collapse.in{
        display:block !important;
    }
}

